# ComputerVision_Tracking_Example

./: README.md
src/: 1_LoadImage.cpp  2_LoadVideo.cpp  3_LoadVideo.cpp  CMakeLists.txt  CMakeLists.txt~
